Now the numbers rows has green background and some more space to the top

--- a/SciCalc/Views/CalculatorPage.xaml
+++ b/SciCalc/Views/CalculatorPage.xaml
@@ -5,24 +5,19 @@
              Title="CalculatorPage">
 
     <Grid
-        RowDefinitions="*,*"
-        ColumnDefinitions="*">
+        RowDefinitions="*,68,48,44,44,48,10,64,64,64,64"
+        ColumnDefinitions="*,*,*,*,*">
 
-        <Grid
-        RowDefinitions="*,68,48,44,44,48"
-        ColumnDefinitions="*,*,*,*,*"
-        Grid.Row="0">
-
-            <!--Color Answer Row-->
-            <BoxView
+        <!--Color Answer Row-->
+        <BoxView
             VerticalOptions="Fill"
             HorizontalOptions="Fill"
             BackgroundColor="#262D37"
             Grid.Row="1"
             Grid.ColumnSpan="5"/>
 
-            <!--Input Area-->
-            <Frame
+        <!--Input Area-->
+        <Frame
             HasShadow="False"
             Padding="6,0,4,0"
             Margin="12"
@@ -33,33 +28,33 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="5">
-                <Label
+            <Label
                 LineHeight="1.5"
                 VerticalTextAlignment="Center"
                 VerticalOptions="Center">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{Binding InputText}" Style="{StaticResource InputBoxLabelStyle}"/>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-            </Frame>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="{Binding InputText}" Style="{StaticResource InputBoxLabelStyle}"/>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+        </Frame>
 
-            <!--Answer Row-->
-            <Grid
+        <!--Answer Row-->
+        <Grid
             ColumnDefinitions="Auto,*"
             Grid.Row="1"
             Grid.Column="0"
             Grid.ColumnSpan="5">
 
-                <Label
+            <Label
                 Text="="
                 VerticalOptions="Center"
                 VerticalTextAlignment="Center"
                 Style="{StaticResource EqualsLabelStyle}"
                 Margin="16,0"/>
 
-                <Label
+            <Label
                 Text="{Binding CalculatedResult, Mode=OneWay}"
                 VerticalOptions="Center"
                 VerticalTextAlignment="Center"
@@ -67,12 +62,12 @@
                 Grid.Column="1"
                 Style="{StaticResource ResultLabelStyle}"
                 Margin="16,0"/>
-            </Grid>
+        </Grid>
 
-            <!--Scientific Operators-->
+        <!--Scientific Operators-->
 
-            <!--Row 1-->
-            <Button
+        <!--Row 1-->
+        <Button
             Grid.Row="2"
             Grid.Column="0"
             ZIndex="1"
@@ -80,7 +75,7 @@
             Style="{StaticResource ScientificOperatorButtonStyle}"
             Text="MEAN"/>
 
-            <Button
+        <Button
             Grid.Row="2"
             Grid.Column="1"
             ZIndex="1"
@@ -88,7 +83,7 @@
             Style="{StaticResource ScientificOperatorButtonStyle}"
             Text="MOD"/>
 
-            <Button
+        <Button
             Grid.Row="2"
             Grid.Column="2"
             ZIndex="1"
@@ -96,7 +91,7 @@
             Style="{StaticResource ScientificOperatorButtonStyle}"
             Text="STD"/>
 
-            <Button
+        <Button
             Grid.Row="2"
             Grid.Column="3"
             ZIndex="1"
@@ -104,7 +99,7 @@
             Style="{StaticResource ScientificOperatorButtonStyle}"
             Text="VAR"/>
 
-            <Button
+        <Button
             Grid.Row="2"
             Grid.Column="4"
             ZIndex="1"
@@ -112,8 +107,8 @@
             Style="{StaticResource ScientificOperatorButtonStyle}"
             Text="FACT"/>
 
-            <!--Row 2-->
-            <Button
+        <!--Row 2-->
+        <Button
             Grid.Row="3"
             Grid.Column="0"
             ZIndex="1"
@@ -123,7 +118,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="SIN"/>
 
-            <Button
+        <Button
             Grid.Row="3"
             Grid.Column="1"
             ZIndex="1"
@@ -133,7 +128,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="COS"/>
 
-            <Button
+        <Button
             Grid.Row="3"
             Grid.Column="2"
             ZIndex="1"
@@ -143,7 +138,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="TAN"/>
 
-            <Button
+        <Button
             Grid.Row="3"
             Grid.Column="3"
             ZIndex="1"
@@ -153,7 +148,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="LOG"/>
 
-            <Button
+        <Button
             Grid.Row="3"
             Grid.Column="4"
             ZIndex="1"
@@ -163,8 +158,8 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="EXP"/>
 
-            <!--Row 3-->
-            <Button
+        <!--Row 3-->
+        <Button
             Grid.Row="4"
             Grid.Column="0"
             ZIndex="1"
@@ -174,7 +169,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="ASIN"/>
 
-            <Button
+        <Button
             Grid.Row="4"
             Grid.Column="1"
             ZIndex="1"
@@ -184,7 +179,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="ACOS"/>
 
-            <Button
+        <Button
             Grid.Row="4"
             Grid.Column="2"
             ZIndex="1"
@@ -194,7 +189,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="ATAN"/>
 
-            <Button
+        <Button
             Grid.Row="4"
             Grid.Column="3"
             ZIndex="1"
@@ -204,7 +199,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="LOG10"/>
 
-            <Button
+        <Button
             Grid.Row="4"
             Grid.Column="4"
             ZIndex="1"
@@ -214,8 +209,8 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="POW"/>
 
-            <!--Row 4-->
-            <Button
+        <!--Row 4-->
+        <Button
             Grid.Row="5"
             Grid.Column="0"
             ZIndex="1"
@@ -225,7 +220,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="SQRT"/>
 
-            <Button
+        <Button
             Grid.Row="5"
             Grid.Column="1"
             ZIndex="1"
@@ -235,7 +230,7 @@
             Command="{Binding ScientificOperatorCommand}"
             CommandParameter="ABS"/>
 
-            <Button
+        <Button
             Grid.Row="5"
             Grid.Column="2"
             ZIndex="1"
@@ -245,7 +240,7 @@
             Command="{Binding RegionOperatorCommand}"
             CommandParameter=","/>
 
-            <Button
+        <Button
             Grid.Row="5"
             Grid.Column="3"
             ZIndex="1"
@@ -255,7 +250,7 @@
             Command="{Binding RegionOperatorCommand}"
             CommandParameter="("/>
 
-            <Button
+        <Button
             Grid.Row="5"
             Grid.Column="4"
             ZIndex="1"
@@ -264,16 +259,19 @@
             Text=")"
             Command="{Binding RegionOperatorCommand}"
             CommandParameter=")"/>
-        </Grid>
+        
         <!--Row 5-->
-        <Grid
-        RowDefinitions="64,64,64,64"
-        ColumnDefinitions="*,*,*,*,*"
-        Grid.Row="1"
-        BackgroundColor="#2dd255">
 
-            <Button
-            Grid.Row="0"
+        <BoxView
+            Grid.Row="7"
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="5"
+            BackgroundColor="#37c884"
+            VerticalOptions="Fill"
+            HorizontalOptions="Fill" />
+        
+        <Button
+            Grid.Row="7"
             Grid.Column="0"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -281,8 +279,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="7"/>
 
-            <Button
-            Grid.Row="0"
+        <Button
+            Grid.Row="7"
             Grid.Column="1"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -290,8 +288,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="8"/>
 
-            <Button
-            Grid.Row="0"
+        <Button
+            Grid.Row="7"
             Grid.Column="2"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -299,8 +297,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="9"/>
 
-            <Button
-            Grid.Row="0"
+        <Button
+            Grid.Row="7"
             Grid.Column="3"
             Grid.ColumnSpan="2"
             ZIndex="1"
@@ -309,9 +307,9 @@
             Command="{Binding ResetCommand}"
             CommandParameter="AC"/>
 
-            <!--Row 6-->
-            <Button
-            Grid.Row="1"
+        <!--Row 6-->
+        <Button
+            Grid.Row="8"
             Grid.Column="0"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -319,8 +317,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="4"/>
 
-            <Button
-            Grid.Row="1"
+        <Button
+            Grid.Row="8"
             Grid.Column="1"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -328,8 +326,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="5"/>
 
-            <Button
-            Grid.Row="1"
+        <Button
+            Grid.Row="8"
             Grid.Column="2"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -337,8 +335,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="6"/>
 
-            <Button
-            Grid.Row="1"
+        <Button
+            Grid.Row="8"
             Grid.Column="3"
             ZIndex="1"
             Style="{StaticResource OperatorButtonStyle}"
@@ -346,8 +344,8 @@
             Command="{Binding MathOperatorCommand}"
             CommandParameter="×"/>
 
-            <Button
-            Grid.Row="1"
+        <Button
+            Grid.Row="8"
             Grid.Column="4"
             ZIndex="1"
             Style="{StaticResource OperatorButtonStyle}"
@@ -355,9 +353,9 @@
             Command="{Binding MathOperatorCommand}"
             CommandParameter="÷"/>
 
-            <!--Row 7-->
-            <Button
-            Grid.Row="2"
+        <!--Row 7-->
+        <Button
+            Grid.Row="9"
             Grid.Column="0"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -365,8 +363,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="1"/>
 
-            <Button
-            Grid.Row="2"
+        <Button
+            Grid.Row="9"
             Grid.Column="1"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -374,8 +372,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="2"/>
 
-            <Button
-            Grid.Row="2"
+        <Button
+            Grid.Row="9"
             Grid.Column="2"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -383,8 +381,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="3"/>
 
-            <Button
-            Grid.Row="2"
+        <Button
+            Grid.Row="9"
             Grid.Column="3"
             ZIndex="1"
             Style="{StaticResource OperatorButtonStyle}"
@@ -392,8 +390,8 @@
             Command="{Binding MathOperatorCommand}"
             CommandParameter="+"/>
 
-            <Button
-            Grid.Row="2"
+        <Button
+            Grid.Row="9"
             Grid.Column="4"
             ZIndex="1"
             Style="{StaticResource OperatorButtonStyle}"
@@ -401,9 +399,9 @@
             Command="{Binding MathOperatorCommand}"
             CommandParameter="-"/>
 
-            <!--Row 8-->
-            <Button
-            Grid.Row="3"
+        <!--Row 8-->
+        <Button
+            Grid.Row="10"
             Grid.Column="0"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -411,8 +409,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="0"/>
 
-            <Button
-            Grid.Row="3"
+        <Button
+            Grid.Row="10"
             Grid.Column="1"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -420,8 +418,8 @@
             Command="{Binding NumberInputCommand}"
             CommandParameter="."/>
 
-            <Button
-            Grid.Row="3"
+        <Button
+            Grid.Row="10"
             Grid.Column="2"
             ZIndex="1"
             Style="{StaticResource NumberButtonStyle}"
@@ -429,8 +427,8 @@
             Command="{Binding BackspaceCommand }"
             CommandParameter="⌫"/>
 
-            <Button
-            Grid.Row="3"
+        <Button
+            Grid.Row="10"
             Grid.Column="3"
             Grid.ColumnSpan="2"
             ZIndex="1"
@@ -438,7 +436,6 @@
             Text="="
             Command="{Binding CalculateCommand }"
             CommandParameter="="/>
-
-        </Grid>
+        
     </Grid>
 </ContentPage>
